--- a/src/Applications/MultiAlign/Windows/Wizard/DatasetSelection.xaml
+++ b/src/Applications/MultiAlign/Windows/Wizard/DatasetSelection.xaml
@@ -51,7 +51,7 @@
                         Add Folder Path</Label>
                     <TextBox Grid.Column="1" 
                              Grid.Row="0" 
-                             Text="{Binding Path=FolderPath}"
+                             Text="{Binding Path=DataFolderPath}"
                              Margin="10,5,10,5"/>
                     <CheckBox Grid.Row="1" 
                               Grid.Column="1"
@@ -63,7 +63,7 @@
                     <Button Grid.Column="2" 
                             Grid.Row="0"                           
                             HorizontalAlignment="Right" 
-                            Command="{Binding Path=BrowseFolderCommand}"
+                            Command="{Binding Path=BrowseDataFolderCommand}"
                             Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"                            
                             Width="100" 
                             Margin="10,5,10,5">Browse</Button>
