--- a/src/Applications/MultiAlign/Windows/Wizard/CondensedAnalysisOptionsView.xaml
+++ b/src/Applications/MultiAlign/Windows/Wizard/CondensedAnalysisOptionsView.xaml
@@ -152,7 +152,7 @@
             Height="32"
             Source="/MultiAlign;component/Resources/gantt-chart-64.png"
             />
-        
+
                 <Expander 
                     Grid.Row="1"
                     Grid.Column="1"
@@ -214,32 +214,32 @@
                                 BorderBrush="LightGray"
                                 BorderThickness="1">
                             <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="300"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="200"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="300"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="200"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
 
 
-                            <Label Content="Instrument Presets"
+                                <Label Content="Instrument Presets"
                                     VerticalContentAlignment="Center"
                                     Foreground="Gray"
                                     Grid.Row="0"
                                     Grid.Column="0"
                                     FontSize="14"/>
-                            <ComboBox
+                                <ComboBox
                                     FontSize="16"                                                       
                                     Margin="5"
                                     Grid.Row="0"
@@ -250,96 +250,96 @@
                                     SelectedItem="{Binding SelectedPreset, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
                                     />
 
-                            <Label
+                                <Label
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Row="1">
-                                Precursor Mass Resolution
-                            </Label>
-                            <Label
+                                    Precursor Mass Resolution
+                                </Label>
+                                <Label
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Column="3"
                                 Grid.Row="1">
-                                Fragmentation Window Size
-                            </Label>
-                            <Label
+                                    Fragmentation Window Size
+                                </Label>
+                                <Label
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Row="3">
-                                LC-Retention Time
-                            </Label>
-                            <Label
+                                    LC-Retention Time
+                                </Label>
+                                <Label
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Column="0"
                                 Visibility="{Binding Path=IsIonMobility}"
                                 Grid.Row="4">
-                                Ion Mobility
-                            </Label>
-                            <TextBox 
+                                    Ion Mobility
+                                </Label>
+                                <TextBox 
                         Width="Auto"
                         Margin="5"
                         Grid.Row="1"
                         Grid.Column="1"                    
                         Text="{Binding Path=MassResolution, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox Width="Auto"
+                                <TextBox Width="Auto"
                         Margin="5"
                         Grid.Row="1"
                         Grid.Column="4"
                         Text="{Binding Path=FragmentationTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox 
+                                <TextBox 
                                 Margin="5"
                                 Grid.Row="3"
                                 Grid.Column="1"
                                 Width="Auto"
                                 Text="{Binding Path=NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-                            <TextBox 
+                                <TextBox 
                         Width="Auto"
                         Margin="5"
                         Grid.Row="4"
                         Grid.Column="1"
                         Visibility="{Binding Path=IsIonMobility}"
                         Text="{Binding Path=DriftTimeTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
-                            <Label
+                                <Label
                         Foreground="Gray"
                         FontSize="14"
                         Margin="5"
                         Grid.Column="2"
                         Grid.Row="1">
-                                ppm
-                            </Label>
-                            <Label                    
+                                    ppm
+                                </Label>
+                                <Label                    
                         Foreground="Gray"
                         FontSize="14"
                         Margin="5"
                         Grid.Column="5"
                         Grid.Row="1">
-                                Th.
-                            </Label>
-                            <Label                    
+                                    Th.
+                                </Label>
+                                <Label                    
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Column="2"
                                 Grid.Row="3">
-                                NET
-                            </Label>
-                            <Label                    
+                                    NET
+                                </Label>
+                                <Label                    
                                 Foreground="Gray"
                                 FontSize="14"
                                 Margin="5"
                                 Grid.Column="2"
                                 Grid.Row="4">
-                                ms
-                            </Label>
+                                    ms
+                                </Label>
 
-                        </Grid>
-                            </Border>
+                            </Grid>
+                        </Border>
                     </DockPanel>
                 </Expander>
                 <Expander 
@@ -561,19 +561,19 @@
                                         Grid.Column="1"                                
                                         Text="{Binding Path=MinimumIntensity, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
                                 </Grid>
-                            </Border>                        
+                            </Border>
                         </Expander>
 
-                    <Expander
+                        <Expander
                         Margin="25,5,5,5"
                         FontSize="14"
                         Foreground="Gray"
                         IsExpanded="True"
-                        Header="LC-MS Features">
+                        Header="LC-MS Features" Height="109">
                             <Border
-                                Margin="5"
+                                Margin="10,0,0,0"
                                 BorderBrush="LightGray"
-                                BorderThickness="1">
+                                BorderThickness="1" Height="44">
                                 <Grid
                             Margin="20,5,5,5"
                             >
@@ -581,55 +581,57 @@
                                         <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="194"/>
+                                        <ColumnDefinition Width="45"/>
                                         <ColumnDefinition Width="164"/>
                                         <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="164"/>
-                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="155"/>
+                                        <ColumnDefinition Width="Auto" MinWidth="234"/>
                                     </Grid.ColumnDefinitions>
 
                                     <Label
                                             Foreground="Gray"
                                             FontSize="14"
-                                            Margin="5"                                
-                                            Grid.Row="0">
+                                            Margin="5,4,5,6"                                
+                                            Grid.Row="0" Grid.ColumnSpan="2">
                                         LC-MS Features should be between
                                     </Label>
                                     <TextBox 
-                                    Margin="5"
+                                    Margin="19,7,18,7"
                                     Grid.Row="0"
-                                    Grid.Column="1"                                
+                                    Grid.Column="2"                                
                                     Text="{Binding  Path=MinimumFeatureLength, 
                                                     Mode=TwoWay, 
                                                     NotifyOnSourceUpdated=True, 
-                                                    UpdateSourceTrigger=PropertyChanged}"/>
+                                                    UpdateSourceTrigger=PropertyChanged}" Height="25" Width="Auto"/>
                                     <Label
                                         Foreground="Gray"
                                         FontSize="14"
-                                        Margin="5"
-                                        Grid.Column="2"
+                                        Margin="3,4,0,6"
+                                        Grid.Column="3"
                                         HorizontalAlignment="Left"
-                                        Grid.Row="0">
+                                        Grid.Row="0" Width="33">
                                         and
                                     </Label>
                                     <TextBox 
-                                    Margin="5"
+                                    Margin="19,7,18,7"
                                     Grid.Row="0"
-                                    Grid.Column="3"                                
+                                    Grid.Column="4"                                
                                     Text="{Binding  Path=MaximumFeatureLength, 
                                                     Mode=TwoWay, 
                                                     NotifyOnSourceUpdated=True, 
-                                                    UpdateSourceTrigger=PropertyChanged}"/>
+                                                    UpdateSourceTrigger=PropertyChanged}" Height="25" Width="Auto"/>
                                     <Label
                                         Foreground="Gray"
                                         FontSize="14"
-                                        Margin="5"
-                                        Grid.Column="4"
-                                        HorizontalAlignment="Left"
+                                        Margin="84,4,80,6"
+                                        Grid.Column="5"
                                         Grid.Row="0">
-                                        scans long
+                                        long
                                     </Label>
-
+                                    <ComboBox HorizontalAlignment="Left" Margin="1,6,0,0" VerticalAlignment="Top" Width="76" Grid.Column="5" Height="25" 
+                                              ItemsSource="{Binding Path = TimeOptions}"
+                                              SelectedItem="{Binding Path = TreatAsTimeOrScan, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
                                 </Grid>
                             </Border>
                         </Expander>
@@ -643,7 +645,7 @@
                         Foreground="Gray"
                         FontSize="24"
                         >
-                            Options
+                        Options
                     </Label>
                     <StackPanel 
                         Margin="5"
